Add full stops in translations
Weblate marked this is as inconsistent. Fixing "source" language files;
rest will be fixed from Weblate.

Fixed errors & messages found by Weblate. Later we could probably fix
also form field descriptions (eg. in admin configs) and errors displayed
for required form fields.

remp/crm#2276

--- a/src/lang/onboarding.sk_SK.yml
+++ b/src/lang/onboarding.sk_SK.yml
@@ -40,9 +40,9 @@ admin:
                 was_subscriber: Bol predplatiteľ
                 was_non_subscriber: Nebol predplatiteľ
         messages:
-            goal_created: Cieľ vytvorený
-            goal_updated: Cieľ aktualizovaný
-            goal_not_found: Cieľ sa nenašiel
+            goal_created: Cieľ vytvorený.
+            goal_updated: Cieľ aktualizovaný.
+            goal_not_found: Cieľ sa nenašiel.
 data:
     goals:
         fields:
